<resources>
    <string name="app_name" translatable="false">MOD</string>
    <string name="action_next">Далее</string>
    <string name="action_select">Выбрать</string>
    <string name="action_edit">Изменить</string>
    <string name="action_select_all">Выбрать все</string>
    <string name="action_ready">Готово</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_book">Забронировать</string>
    <string name="action_continue">Продолжить</string>
    <string name="action_exit">Выйти</string>
    <string name="action_reject">Отклонить</string>
    <string name="action_send">Отправить</string>
    <string name="action_update">Обновить</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="action_call">Позвонить</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Поиск</string>
    <string name="action_share">Поделиться</string>
    <string name="action_buy">Купить</string>
    <string name="action_change">Изменить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_close">ЗАКРЫТЬ</string>
    <string name="action_add">Добавить</string>
    <string name="action_reset">Сбросить</string>
    <string name="action_pay">Оплатить</string>
    <string name="action_start_shopping">Начать покупки</string>
    <string name="action_forgot_password">Забыли пароль?</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Регистрировать</string>
    <string name="action_see_products">Смотреть товары</string>
    <string name="action_show_all_products">ПОКАЗАТЬ ВСЕ ТОВАРЫ</string>
    <string name="action_add_to_cart">Добавить в корзину</string>
    <string name="action_try_again">Попробовать снова</string>
    <string name="action_remind_later">НАПОМНИТЬ ПОЗЖЕ</string>
    <string name="action_added_to_favorite">Добавлено в избранное</string>
    <string name="removed_from_favorite">Удалено из избранного</string>
    <string name="error_no_connection">Нет интернет подключения</string>
    <string name="error_no_connection2">НЕТ СОЕДИНЕНИЯ \nС ИНТЕРНЕТОМ</string>
    <string name="server_error">ОШИБКА СЕРВЕРА</string>
    <string name="server_is_not_working_or_is_not_being_updated">Сервер не работает или \nне обновляется</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="new_version">НОВАЯ ВЕРСИЯ</string>
    <string name="available_new_version">Доступна новая версия</string>
    <string name="logout_text">Вы действительно хотите выйти?</string>
    <string name="request_sent_successfully">Запрос успешно отправлен</string>
    <string name="rationale_camera">Нужен доступ к камере</string>
    <string name="rationale_gallery">Нужен доступ к галерее</string>
    <string name="rationale_location">Нужен доступ к вашему местоположению</string>
    <string name="menu_about_app">About App</string>
    <string name="title_sign_in">Войти</string>
    <string name="title_sign_up">Регистрация</string>
    <string name="title_recovery">Восстановить пароль</string>
    <string name="title_products">ВЕРХНЯЯ ОДЕЖДА</string>
    <string name="title_filter">Фильтры</string>
    <string name="title_choose_country">Выберите страну</string>
    <string name="title_check_order_status">ПРОВЕРИТЬ СТАТУС ЗАКАЗА</string>
    <string name="title_call_me">ЗАКАЗАТЬ ЗВОНОК</string>
    <string name="title_ask_question">ЗАДАТЬ НАМ ВОПРОС</string>
    <string name="title_support">ЦЕНТР ПОДДЕРЖКИ</string>
    <string name="title_about">НАШИ КОНТАКТЫ</string>
    <string name="title_checkout">Оформления заказа</string>
    <string name="title_adres">Адрес доставки</string>
    <string name="title_search">ПОИСК</string>
    <string name="title_profile_authorized">АККАУНТ</string>
    <string name="title_profile_my_orders">МОИ ЗАКАЗЫ</string>
    <string name="title_code">Подтверждение телефона</string>
    <string name="action_checkout">ОФОРМИТЬ</string>
    <string name="support_center_location_text">Узнать, где мой заказ</string>
    <string name="support_center_history_text">Узнать сроки и условия</string>
    <string name="support_center_meter_text">Выбрать размер</string>
    <string name="support_center_item_new_users">Для новых пользователей</string>
    <string name="support_center_item_delivery">Доставка</string>
    <string name="support_center_item_return">Возврат</string>
    <string name="support_center_item_sales">Скидки и акции</string>
    <string name="support_center_item_order">Заказ</string>
    <string name="support_center_item_goods">Товары</string>
    <string name="support_center_item_payment">Оплата</string>
    <string name="support_center_item_partners_goods">Товары партнеров</string>
    <string name="support_center_item_profile_and_subscriptions">Личный кабинет и подписки</string>
    <string name="support_center_item_work_and_collaborations">Работа и сотрудничество</string>
    <string name="support_center_item_reviews">Отзывы</string>
    <string name="support_center_email_us">Напишите нам</string>
    <string name="support_center_call_us">Позвоните нам</string>
    <string name="nav_menu_item_selection">Подборка</string>
    <string name="nav_menu_item_catalog">Каталог</string>
    <string name="nav_menu_item_favorite">Избранное</string>
    <string name="nav_menu_item_profile">Профиль</string>
    <string name="nav_menu_item_cart">Корзина</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_email">Эл. почта</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_repeat_password">Повторите пароль</string>
    <string name="profile_title">ПРОФИЛЬ</string>
    <string name="auth_view_title">Привилегии</string>
    <string name="auth_view_message">Увеличивайте персональную скидку, сохраняйте\nизбранное, получайте персональные рекомендации.</string>
    <string name="profile_check_status_order">Проверить статус заказа</string>
    <string name="profile_ask_question">Задать нам вопрос</string>
    <string name="profile_call_us">Позвоните нам</string>
    <string name="profile_call_me">Позвонить Вам</string>
    <string name="profile_call_support_center">Центр поддержки MOD</string>
    <string name="profile_about_app">О MOD</string>
    <string name="profile_authorized_name_title_first_part">ЗДРАВСТВУЙТЕ," "</string>
    <string name="profile_authorized_name_subtitle">Этот раздел создан специально для вас</string>
    <string name="profile_authorized_item_my_orders">Мои заказы</string>
    <string name="profile_authorized_item_my_data">Мои данные</string>
    <string name="profile_authorized_item_my_addresses">Мои адреса</string>
    <string name="profile_authorized_item_favorites">Избранные</string>
    <string name="profile_authorized_item_call_us">Позвоните нам</string>
    <string name="profile_authorized_item_call_you">Позвонить вам</string>
    <string name="profile_authorized_item_support_center">Центр поддержки MOD</string>
    <string name="profile_authorized_item_about_mod">О MOD</string>
    <string name="profile_authorized_item_logout">Выйти</string>
    <string name="profile_authorized_btn_questions">Остались вопросы?</string>
    <string name="profile_my_orders_title">МОИ ЗАКАЗЫ</string>
    <string name="profile_my_orders_no_orders_title">У ВАС пока нет ЗАКАЗОВ</string>
    <string name="profile_my_orders_no_orders_subtitle">Здесь появится информация о ваших заказах</string>
    <string name="profile_my_orders_search_hint">Название товара или номер заказа</string>
    <string name="profile_my_orders_order_status_delivered">Доставлен</string>
    <string name="profile_my_orders_order_status_canceled">Отменен</string>
    <string name="profile_my_orders_order_status_in_transit">В пути</string>
    <string name="profile_my_orders_order_status_more">Подробнее</string>
    <string name="profile_my_order_size">Размер:</string>
    <string name="profile_my_order_quantity">Количество</string>
    <string name="profile_my_order_price">Стоимость</string>
    <string name="profile_my_order_delivery">Доставка</string>
    <string name="profile_my_order_total">К оплате</string>
    <string name="profile_my_order_quantity_short">Кол-во:</string>
    <string name="profile_my_data_title">МОИ ДАННЫЕ</string>
    <string name="profile_my_data_full_name">Имя и фамилия</string>
    <string name="profile_my_data_phone">Номер телефона</string>
    <string name="profile_my_data_email">Эл. почта</string>
    <string name="profile_my_birth_date">Дата Рождения</string>
    <string name="profile_my_addresses_title">МОИ АДРЕСА</string>
    <string name="profile_my_addresses_edit_title">РЕДАКТИРОВАТЬ</string>
    <string name="profile_my_addresses_create_title">НОВЫЙ АДРЕС</string>
    <string name="profile_my_addresses_you_have_no_addresses">У вас нет адресов</string>
    <string name="profile_my_addresses_edit">Pедактировать</string>
    <string name="profile_my_addresses_default_address">По умолчанию</string>
    <string name="profile_my_addresses_receiver_name">Имя получателя</string>
    <string name="profile_my_addresses_address">Улица, дом, квартира</string>
    <string name="profile_my_addresses_city">Город</string>
    <string name="profile_my_addresses_zip_code">Почтовый индекс</string>
    <string name="profile_my_addresses_phone">Мобильный телефон</string>
    <string name="profile_my_addresses_there_is_no_postal_code_in_my_address">В моём адресе нет почтового кода</string>
    <string name="profile_my_addresses_set_as_default">Установить по умолчанию</string>
    <string name="profile_settings_notification">Уведомления</string>
    <string name="profile_settings_subscription_to_news">Подписка на рассылку</string>
    <string name="profile_favorites_title">ИЗБРАННОЕ</string>
    <string name="favorite_title">ИЗБРАННОЕ</string>
    <string name="favorite_placeholder_title">Здесь пока пусто</string>
    <string name="favorite_placeholder_message">Вы пока ничего не добавили в избранное</string>
    <string name="hint_catalog_search">Поиск вещей и брендов</string>
    <string name="selection_placeholder_title">Раздел наполняется и скоро будет \nдоступен для просмотра</string>
    <string name="selection_placeholder_message">С УВАЖЕНИЕМ MOD LLC</string>
    <string name="actual_header">Актуально</string>
    <string name="call_me_subtitle">Оставьте нам свой номер телефона и мы \nперезвоним Вам в течение 5-ти минут</string>
    <string name="check_order_status_subtitle">Если у вас остались жалобы и вопросы по заказу или вы не можете вспомнить номер заказа, просим обратиться в службу поддержки</string>
    <string name="hint_order_id">Номер заказа</string>
    <string name="order_status">Статус: %s</string>
    <string name="hint_message_topic">Тема сообщения</string>
    <string name="hint_message">Сообщение</string>
    <string name="ask_question_with_socials">Если у вас возникли любые вопросы по заказу, оформлению, статусу или доставке - пишите нам в чат. Мы будем рады помочь Вам!</string>
    <string name="ask_question_by_phone">Вы также можете позвонить нам по телефонам</string>
    <string name="ask_question_phone_for_regions">%s - для звонков из региона</string>
    <string name="ask_question_phone_for_capital">%s - для звонков из Ташкента</string>
    <string name="hint_city">Город</string>
    <string name="hint_street">Улица</string>
    <string name="hint_home">Дом</string>
    <string name="hint_flat">Квартира</string>
    <string name="adreses_header">Выберите условия доставки</string>
    <string name="country_header">Выберите страну</string>
    <string name="products_subtitle">%s всего</string>
    <string name="filters">Фильтры</string>
</resources>