<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/home_graph"
                android:icon="@drawable/ic_selection"
                android:title="@string/nav_menu_item_selection" />
        <item
                android:id="@+id/catalog_graph"
                android:icon="@drawable/ic_catalog"
                android:title="@string/nav_menu_item_catalog" />
        <item
                android:id="@+id/starred_graph"
                android:icon="@drawable/ic_favorite"
                android:title="@string/nav_menu_item_favorite" />
        <item
                android:id="@+id/profile_graph"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_menu_item_profile" />
        <item
                android:id="@+id/cart_graph"
                android:icon="@drawable/ic_cart"
                android:title="@string/nav_menu_item_cart" />
    </group>
</menu>